[gd_scene load_steps=4 format=3 uid="uid://ba77nc8755alf"]

[ext_resource type="Script" path="res://Scenes/MainMenu.gd" id="1_45lx5"]
[ext_resource type="FontFile" uid="uid://b2cswqm32sj5f" path="res://Lex.ttf" id="2_wwa65"]
[ext_resource type="AudioStream" uid="uid://yfmc76ec18kr" path="res://Sounds/zap.mp3" id="3_qr6qu"]

[node name="Menu" type="Node2D"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qr6qu")
volume_db = 24.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1917.0
offset_bottom = 1081.0
color = Color(0, 0, 0, 1)

[node name="MainMenu" type="MarginContainer" parent="."]
offset_right = 1917.0
offset_bottom = 1081.0
script = ExtResource("1_45lx5")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
custom_minimum_size = Vector2(1200, 700)
layout_mode = 2
theme_override_constants/separation = 100

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwa65")
theme_override_font_sizes/font_size = 120
text = "Switch"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(30, 150)
layout_mode = 2

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwa65")
theme_override_font_sizes/font_size = 90
text = ">"

[node name="Selector2" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwa65")
theme_override_font_sizes/font_size = 90
text = ">"

[node name="Selector3" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwa65")
theme_override_font_sizes/font_size = 90
text = ">"

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(180, 150)
layout_mode = 2

[node name="Label2" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwa65")
theme_override_font_sizes/font_size = 90
text = "Start"

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwa65")
theme_override_font_sizes/font_size = 90
text = "Options"

[node name="Label3" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwa65")
theme_override_font_sizes/font_size = 90
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qr6qu")
volume_db = 6.0
